2006-09-22  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c: (get_user_tooltip):
	  - Fix a crash when using type-ahead search.  Bug #356091.

2006-09-20  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/xtext.c: (primary_clear_cb):
	  - Fix a crash when withdrawing the selection on unrealize. Bug
	  #355503.

Sun Sep 10 13:27:43 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* plugins/autoaway/gscreensaver.c:
	  - Use the new gnome-screensaver API. Bug #354306

2006-09-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/irc-network-editor.glade:
	* data/preferences-dialog.glade:
	* data/setup-dialog.glade:
	* data/topic-change.glade:
	* data/xchat-gnome.glade:
	  - HIG fixes: use right capitalisation, and fix access keys. Bug
	    #354846.

Thu Sep  7 22:03:23 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/marshallers.list:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/Makefile.am:
	* src/fe-gnome/xg-marshal.list:
	  - Split marshal into 2 files: xg-marshal.[ch]
	  - Rename marshallers.list to xg-marshal.list.
	  - Set a "xg" as prefix for marshals.

Wed Sep  6 22:04:20 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/migration.c:
	  - Fix a leak. Bug #354608

2006-09-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/navigation-tree.c:
	* src/fe-gnome/text-entry.c:
	  - Fix PRIMARY handling in the text entry. Bug #347067.

2006-09-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c: 
	* src/fe-gnome/xtext.h:
	  - Fix PRIMARY selection handling. Bug #351272.

2006-09-03  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	  - Fix ordering of autojoin channels with keys. Bug #346987.

2006-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/fe-gnome.c: (fe_open_url):
	  - Fix stupid argument transposition bug from patch from bug #353740.

2006-09-01  Christian Persch  <chpe@cvs.gnome.org>
